<resources>
    <string name="app_name">MyShop</string>
    <string name="splash_activity">Splash Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_my_shop_dash_board">MyShopDashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home_second">Home Second</string>
    <string name="sign_out">Sign Out</string>
    <string name="watches">Watches</string>
    <string name="bags">Bags</string>
    <string name="shoes">Shoes</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="order">Order</string>
    <string name="delivery_price">Delivery Price: 5$</string>
    <string name="write_card_number">Write Card Number</string>
    <string name="buy">Buy</string>
    <string name="write_cvv">Write CVV</string>
    <string name="write_valid_date">Write Valid Date</string>
    <string name="mm_yy">mm/yy</string>
    <string name="you_have_bought_product_successfully">You have bought product successfully!</string>
</resources>
