<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AuthenticationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-130px"
        android:layout_marginEnd="50dp"
        android:layout_weight="0.5"
        android:background="@drawable/linearlayout_container_background"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstNameField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:lines="1" />

        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/last_name"
            android:lines="1" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:lines="1" />

        <EditText
            android:drawableEnd="@drawable/ic_password"
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1" />

        <EditText
            android:drawableEnd="@drawable/ic_password"
            android:id="@+id/confirmPasswordField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:lines="1" />
    </LinearLayout>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="-20dp"
        android:background="@drawable/register_btn_background"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:alpha="0.7"
        android:background="@drawable/login_btn_background"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="OnClick" />


</LinearLayout>